# advent

./: .gitignore  .gitmodules  advent.cabal  stack.yaml
1/: one.hs
2/: two.hs
2015/: advent.cabal
2015/src/: Four.hs  Seven.hs  Thirteen.hs  Three.hs
2016/: README.md  sixteen.cabal
2016/src/: DayFive.hs  DayFour.hs  DaySeven.hs
2018/: build.sc  cookie
2018/advent/src/: AdventError.scala  AdventOfCode.scala  AdventOfCodeConfig.scala  Main.scala  PassThroughAdventOfCode.scala  RemoteAdventOfCode.scala  Types.scala  package.scala
2018/advent/src/cmd/: AdventCommand.scala  StarParam.scala
2018/challenges/src/: Day01.scala  Day02.scala  Day03.scala  Main.scala  Util.scala
2019/: Cargo.toml
2019/input/: 04.input
2019/src/: main.rs
2019/src/advent/: mod.rs  opcode_computer.rs
2019/src/advent/stars/: four.rs  one.rs  three.rs  two.rs
2020/: Makefile  eight.sml  five.scm  four.rb  nine.py  one.c  seven.scala  six.perl  ten.hs  three.bash  two.pl
2020/input/: 2
2021/: build.gradle.kts  shell.nix
2021/src/main/kotlin/: Main.kt  day01.kt  day02.kt  day03.kt  day04.kt  util.kt
3/: three.hs
5/: five.hs
6/: six.hs
app/: Main.hs
four/: four.cabal
four/app/: Main.hs
four/src/: Four.hs
seventeen/src/main/scala/: Main.scala
seventeen/src/main/scala/aoc/: AdventOfCodeConfig.scala
seventeen/src/main/scala/cmd/: AdventCommand.scala
sixteen/: LICENSE  Makefile  sixteen.cabal
sixteen/app/: Main.hs
sixteen/src/: DayEight.hs  DayEleven.hs  DayFive.hs  DayNine.hs  DayOne.hs  DaySeven.hs  DaySix.hs  DayTen.hs  DayThree.hs  DayTwo.hs  Lib.hs
src/: Eight.hs  Eleven.hs  One.hs  Twelve.hs  Two.hs
