name:                advent
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/eddsteel/advent
license:             BSD3
license-file:        LICENSE
author:              Edd Steel
maintainer:          edd@eddsteel.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     One
                     , Two
                     , Three
                     , Four
                     , Five
                     , Six
                     , Eleven
                     , Twelve
  build-depends:       base >= 4.7 && < 5
                     , cryptohash
                     , bytestring
                     , base16-bytestring
                     , containers
                     , aeson
                     , unordered-containers
                     , vector
                     , scientific
                     , text
  default-language:    Haskell2010

executable advent
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
  default-language:    Haskell2010

test-suite advent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , advent
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eddsteel/advent
