name:                sixteen
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/eddsteel/sixteen#readme
license:             BSD3
license-file:        LICENSE
author:              Edward Steel
maintainer:          edward.steel@gmail.com
copyright:           GPL
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , DayOne
                     , DayTwo
                     , DayThree
                     , DayFour
                     , DayFive
                     , DaySix
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , tuple
                     , split
                     , parsec
                     , bytestring
                     , cryptohash
                     , pureMD5
  default-language:    Haskell2010

executable advent2016
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sixteen
  default-language:    Haskell2010

test-suite sixteen-doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             DocTest.hs
  build-depends:       base
                     , sixteen
                     , doctest == 0.11.*
                     , Glob == 0.7.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eddsteel/sixteen
